Adding generic and product
