# src/models/dto/product.dto.ts
@@ -1,0 +1,3 @@
+import { Product } from "../entities/product"
+
+export type CreateProductDto = Pick<Product, 'name' | 'description' | 'price'>
