# src/models/entities/product.ts
@@ -2,12 +2,21 @@ import { Entity, PrimaryGeneratedColumn, Column } from 'typeorm';
 import { BaseTypeorm } from './base.typeorm';
 
 @Entity()
-export class Example extends BaseTypeorm {
+export class Product extends BaseTypeorm  {
   @PrimaryGeneratedColumn()
-  id: number;
+  id: string;
 
   @Column()
   name: string;
+
+  @Column({unique: true})
+  description: string;
+
+  @Column()
+  price: number;
+
+  @Column()
+  picture: string;
 
   // Add more columns as needed
 }
